# walking-coder

./: .mcp.json  CLAUDE.md  DEPLOYMENT.md  Dockerfile  TEST_GUIDE.md  app.py  claude_chat.py  deploy.sh  docker-compose.yml  interactive_claude.py  main.py  nginx.conf  projects.json  projects.py  pyproject.toml  server_install.sh  simple_terminal.py  terminal_app.py  test_claude.py  test_local.html
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
static/css/: projects.css  style.css
static/js/: app.js  project-manager.js  swipe.js
templates/: claude_chat.html  interactive.html  mobile-claude.html  mobile_terminal.html  project-manager.html  simple_terminal.html  terminal.html
