[project]
name = "walking-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
]
